launchpad-buildd (148) UNRELEASED; urgency=medium

  * Move the contents of /usr/share/launchpad-buildd/slavebin/ into bin/ in
    the source package, to keep things a bit more organised.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 25 Jul 2017 23:07:58 +0100

launchpad-buildd (147) xenial; urgency=medium

  * Revert change to run snapcraft as non-root with passwordless sudo; this
    broke "type: os" and "type: kernel" snap builds, and requires more
    thought.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 25 Jul 2017 13:48:10 +0100

launchpad-buildd (146) xenial; urgency=medium

  * buildsnap: Initialise git submodules (LP: #1694413).
  * Run snapcraft as non-root with passwordless sudo, since we run into
    buggy corner cases in some plugins when running as root (LP: #1702656).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 18 Jul 2017 17:03:36 +0100

launchpad-buildd (145) xenial; urgency=medium

  * buildrecipe: Explicitly mark the local apt archive as trusted
    (LP: #1701826).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 03 Jul 2017 15:03:51 +0100

launchpad-buildd (144) xenial; urgency=medium

  * buildsnap: Fix revision_id computation to handle the case where
    --git-path is not passed.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 15 May 2017 21:45:16 +0100

launchpad-buildd (143) xenial; urgency=medium

  * Record the branch revision used to build a snap and return it along with
    other XML-RPC status information (LP: #1679157).
  * Write out trusted keys sent by buildd-manager (LP: #1626739).
  * Add tests for lpbuildd.pottery, extracted from Launchpad.
  * Configure a git:// proxy for snap builds (LP: #1663920).
  * buildsnap: If --git-repository is passed but --git-path is not, build
    the default branch of the repository (LP: #1688224).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 12 May 2017 16:47:57 +0100

launchpad-buildd (142) trusty; urgency=medium

  * lpbuildd.binarypackage: Pass DEB_BUILD_OPTIONS=noautodbgsym if we have