@@ -14,7 +14,8 @@ override_dh_auto_build:
 		> buildd-slave-example.conf
 
 override_dh_auto_test:
-	:
+	dh_auto_test
+	find -name \*.pyc -print0 | xargs -0r rm -f
 
 override_dh_auto_clean:
 	find -name \*.pyc -print0 | xargs -0r rm -f
