@@ -2,6 +2,8 @@ launchpad-buildd (148) UNRELEASED; urgency=medium
 
   * Move the contents of /usr/share/launchpad-buildd/slavebin/ into bin/ in
     the source package, to keep things a bit more organised.
+  * Run tests at build time, now that python-txfixtures is in
+    ppa:launchpad/ubuntu/ppa (and >= zesty).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 25 Jul 2017 23:07:58 +0100
 
